fix: panel overflow styling

--- a/resources/sass/components/_panel.scss
+++ b/resources/sass/components/_panel.scss
@@ -45,4 +45,5 @@
     display: flow-root;
     color: var(--panel-fg);
     background-color: var(--panel-bg);
+    overflow-wrap: break-word;
 }
